# invariant-ekf

./: README.md  imu_bias_ekf.py  lie_algebra.py  main.py  noise_params.py  offline_bag_read.py  pyproject.toml  state.py
bags/rosbag2_2026_02_13-08_45_19/: metadata.yaml  rosbag2_2026_02_13-08_45_19_0.mcap
bags/rosbag2_2026_02_18-22_49_52/: metadata.yaml
bags/rosbag2_2026_02_18-22_55_56/: metadata.yaml
invariant_ekf/: lie_algebra.py
tests/: lie_tests.py  test_lie.py  test_preintegrate.py
